<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.barmpas.upliftme.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="2"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/todays_points"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/textPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp"/>

        <com.hookedonplay.decoviewlib.DecoView
            xmlns:custom="http://schemas.android.com/apk/res-auto"
            android:id="@+id/dynamicArcView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            custom:dv_lineWidth="16dp" >

        </com.hookedonplay.decoviewlib.DecoView>
    </RelativeLayout>

    <TextView
        android:id="@+id/overall_Points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/overall_points"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1.5"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_Connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/ic_group_white_24dp"
            android:text="@string/connect"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorIntro" />

        <Button
            android:id="@+id/button_Feel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/ic_blur_on_white_24dp"
            android:text="@string/feel"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorIntro" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_Nutrition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/ic_free_breakfast_white_24dp"
            android:text="@string/health"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorIntro" />

        <Button
            android:id="@+id/button_Do"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/ic_directions_walk_white_24dp"
            android:text="@string/do_"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/colorIntro" />

    </LinearLayout>
    </LinearLayout>

</LinearLayout>
